--- a/rollup/core/classes/RollupCalculator.cls
+++ b/rollup/core/classes/RollupCalculator.cls
@@ -359,18 +359,19 @@ public without sharing abstract class RollupCalculator {
           }
         }
       }
-      if (shouldAddToResults) {
-        if (this.isDistinct) {
-          if (this.distinctValues.contains(result.currentValue)) {
-            continue;
-          }
-          this.distinctValues.add(result.currentValue);
+      if (shouldAddToResults == false) {
+        continue;
+      }
+      if (this.isDistinct) {
+        if (this.distinctValues.contains(result.currentValue)) {
+          continue;
         }
-        result.matchesCurrent = currentItemMatches;
-        winnowedItems.add(result);
-        if (this.op == Rollup.Op.SOME) {
-          break;
-        }
+        this.distinctValues.add(result.currentValue);
+      }
+      result.matchesCurrent = currentItemMatches;
+      winnowedItems.add(result);
+      if (this.op == Rollup.Op.SOME) {
+        break;
       }
     }
     if (this.metadata.LimitAmount__c != null) {
@@ -568,6 +569,8 @@ public without sharing abstract class RollupCalculator {
       super.setDefaultValues(lookupRecordKey, priorVal);
       if (this.returnVal instanceof Decimal) {
         this.returnDecimal = (Decimal) this.returnVal;
+      } else if (this.returnVal == null) {
+        this.returnDecimal = (Decimal) this.defaultVal;
       }
     }
 
@@ -608,7 +611,7 @@ public without sharing abstract class RollupCalculator {
         this.returnVal = 0.00;
       }
       if (this.returnVal == 0) {
-        this.returnVal = this.metadata.FullRecalculationDefaultNumberValue__c != null ? this.metadata.FullRecalculationDefaultNumberValue__c : null;
+        this.returnVal = (Decimal) this.defaultVal;
       }
       return this.returnVal;
     }
@@ -890,7 +893,7 @@ public without sharing abstract class RollupCalculator {
       if (opFieldOnLookupObject.getDescribe().getType() == Schema.DisplayType.MULTIPICKLIST) {
         this.concatDelimiter = ';';
       } else if (this.metadata.ConcatDelimiter__c != null) {
-        this.concatDelimiter = this.metadata.ConcatDelimiter__c;
+        this.concatDelimiter = this.metadata.ConcatDelimiter__c.unescapeJava();
       } else {
         this.concatDelimiter = ', ';
       }
@@ -921,7 +924,7 @@ public without sharing abstract class RollupCalculator {
     }
 
     protected override void setReturnValue() {
-      if (this.op.name().contains(Rollup.Op.CONCAT.name())) {
+      if (this.op.name().contains(Rollup.Op.CONCAT.name()) && this.concatDelimiter != '\n') {
         String trimmedDelimiter = this.concatDelimiter.trim();
         String possibleReturnValue = this.stringVal.normalizeSpace();
         while (possibleReturnValue.endsWith(trimmedDelimiter)) {
@@ -933,6 +936,8 @@ public without sharing abstract class RollupCalculator {
 
         this.stringVal = possibleReturnValue.trim();
         this.sortAndConcat();
+      } else {
+        this.stringVal = this.stringVal.trim();
       }
       this.returnVal = this.stringVal;
     }
