--- a/rollup/core/classes/RollupEvaluator.cls
+++ b/rollup/core/classes/RollupEvaluator.cls
@@ -301,6 +301,7 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
       }
     }
 
+    @SuppressWarnings('PMD.AvoidDeeplyNestedIfStmts')
     private List<WhereCondition> recursivelyCreateConditions(String localWhereClause) {
       if (localWhereClause.startsWith('(') && localWhereClause.endsWith(')')) {
         localWhereClause = localWhereClause.substring(1, localWhereClause.length() - 1);
@@ -473,29 +474,7 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
         return false;
       }
       List<String> fieldParts = fieldName.split(RELATIONSHIP_FIELD_DELIMITER);
-      if (fieldName.contains('Owner.')) {
-        Integer ownerIndex = fieldParts.indexOf('Owner');
-        Schema.SObjectType ownerType;
-        if (ownerIndex > 0) {
-          Integer index = 0;
-          while (index < ownerIndex) {
-            String relationshipName = fieldParts[index];
-            String fieldRef = getRelationshipNameFromField(relationshipName);
-            SObjectField fieldToken = this.fieldNameToField.get(fieldRef);
-            if (fieldToken.getDescribe().isNamePointing()) {
-              return false;
-            }
-            ownerType = fieldToken.getDescribe().getReferenceTo()[0];
-            index++;
-          }
-        } else {
-          ownerType = this.calcItemType;
-        }
-        return (ownerType == this.calcItemType ? this.fieldNameToField : ownerType.getDescribe().fields.getMap())
-            .get('OwnerId')
-            .getDescribe()
-            .isNamePointing() == false;
-      } else {
+      if (fieldName.contains('Owner.') == false) {
         Map<String, Schema.SObjectField> localFieldNameToField = this.fieldNameToField;
         while (fieldParts.size() > 1) {
           String relationshipPart = fieldParts.remove(0);
@@ -511,6 +490,23 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
         String endPart = fieldParts[0];
         return localFieldNameToField.containsKey(endPart);
       }
+      Schema.SObjectType ownerType = this.calcItemType;
+      Integer ownerIndex = fieldParts.indexOf('Owner');
+      if (ownerIndex > 0) {
+        Integer index = 0;
+        while (index < ownerIndex) {
+          String relationshipName = fieldParts[index];
+          String fieldRef = getRelationshipNameFromField(relationshipName);
+          SObjectField fieldToken = this.fieldNameToField.get(fieldRef);
+          if (fieldToken.getDescribe().isNamePointing()) {
+            return false;
+          }
+          ownerType = fieldToken.getDescribe().getReferenceTo()[0];
+          index++;
+        }
+      }
+      return (ownerType == this.calcItemType ? this.fieldNameToField : ownerType.getDescribe().fields.getMap()).get('OwnerId').getDescribe().isNamePointing() ==
+        false;
     }
   }
 
